--- a/tox.ini
+++ b/tox.ini
@@ -115,6 +115,7 @@ deps =
     mypy
     pydantic
     click
+    types-tabulate
 skip_install = true
 commands = mypy --install-types --non-interactive --ignore-missing-imports --strict src/
 
