--- a/tox.ini
+++ b/tox.ini
@@ -41,6 +41,7 @@ commands =
 extras =
     # See the [project.optional-dependencies] entry in pyproject.toml for "tests"
     tests
+    nlp
 
 [testenv:coverage-clean]
 description = Remove testing coverage artifacts.
@@ -116,8 +117,9 @@ deps =
     pydantic
     click
     types-tabulate
+    biosynonyms
 skip_install = true
-commands = mypy --install-types --non-interactive --ignore-missing-imports --strict src/
+commands = mypy --ignore-missing-imports --strict src/
 
 [testenv:doc8]
 skip_install = true
@@ -142,7 +144,7 @@ description = Build the documentation locally, allowing warnings.
 extras =
     # See the [project.optional-dependencies] entry in pyproject.toml for "docs"
     docs
-    # You might need to add additional extras if your documentation covers it
+    nlp
 commands =
     python -m sphinx -b html -d docs/build/doctrees docs/source docs/build/html
 
