--- a/tox.ini
+++ b/tox.ini
@@ -239,6 +239,7 @@ deps =
     twine >= 1.5.0
 commands =
     {[testenv:build]commands}
+    twine check dist/*
     twine upload --skip-existing dist/*
 
 [testenv:finish]
@@ -301,6 +302,7 @@ deps =
     twine >= 1.5.0
 commands =
     {[testenv:build]commands}
+    twine check dist/*
     twine upload --skip-existing --repository testpypi dist/*
 
 [testenv:testfinish]
