--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,6 +5,7 @@ prune notebooks
 prune tests/.pytest_cache
 prune docs
 prune export
+prune data
 
 global-exclude *.py[cod] __pycache__ *.so *.dylib .DS_Store *.gpickle .idea/**
 
