--- a/tox.ini
+++ b/tox.ini
@@ -117,8 +117,8 @@ deps =
     pydantic
     click
     types-tabulate
-    biosynonyms
-skip_install = true
+extras =
+    nlp
 commands = mypy --ignore-missing-imports --strict src/
 
 [testenv:doc8]
